--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body{
-    width: 1600px;
-    background-color: #ffffff;
+    
+    background-color:#FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .bodysection{
     width: 1340px;
-    margin-top: 56px;
-    margin-left: 170px;
-    
+    margin-top: 56px;    
     background-color: #ffffff;
 }
 header{
@@ -109,6 +110,8 @@ h2{
     color: #ffffff;
     background-color:var(--buttonblue) ;
     border-radius: 55px;
+    cursor: pointer;
+
 }
 main{
     display: flex;
@@ -176,7 +179,12 @@ h3{
     box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
     border-radius: 20px;
     margin-bottom: 37px;
+    transition: all 0.2s;
+    cursor: pointer;
     
+}
+.card:hover{
+    transform: scale(1.1);
 }
 
 
@@ -265,7 +273,11 @@ h3{
     border-radius: 55px;
     border:1.4px var(--buttonblue) solid;
     margin-top: 37px;
+    cursor: pointer;
 
+}
+.secondmainsection div>button:hover{
+    background-color: aqua;
 }
 .thirdmainsection{
     display: flex;
@@ -311,6 +323,11 @@ h3{
     background-color: #ffffff;
     border-radius: 55px;
     border:1.4px var(--buttonblue) solid;
+
+}
+.thirdmainsection div>button:hover{
+    background-color: aqua;
+
 }
 .forthmainsection{
     width: 84%;
@@ -318,7 +335,7 @@ h3{
     flex-direction: column;
     align-items: center;
     border-radius: 24px;
-    background-color: var(--buttonblue);
+    background: linear-gradient(208.18deg, #67C3F3 9.05%, #5A98F2 76.74%);
     margin-top: 222px;
     margin-bottom: 270px;
 }
@@ -403,7 +420,12 @@ h3{
 .checkoutcard{
     width:31% ;
     box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
-    border-radius: 20px
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.checkoutcard:hover{
+    transform: scale(1.1);
 }
 .checkoutcard>img{
     margin-bottom: 21px;
@@ -455,7 +477,7 @@ footer{
     width: 100%;
     height: 488px;
     position: relative;
-    background-color: #67C3F3;
+    background: linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -558,8 +580,15 @@ h6{
     line-height: 38px;
     color: #FFFFFF;
 }
+footer a:hover{
+color: aqua;
+}
 .element2{
     position: absolute;
     left: 0;
     bottom: 0;
+}
+button:hover{
+    background-color: aqua;
+    cursor: pointer;
 }
