--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ h2{
     background-color:var(--buttonblue) ;
     border-radius: 55px;
     cursor: pointer;
+    border: none;
 
 }
 main{
@@ -338,6 +339,9 @@ h3{
     background: linear-gradient(208.18deg, #67C3F3 9.05%, #5A98F2 76.74%);
     margin-top: 222px;
     margin-bottom: 270px;
+}
+.downicon{
+    margin-left: 10px;
 }
 .forthmainsection h3{
     margin-top: 64px;
